<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e4e4e4"
    android:layout_marginBottom="8dp"
    tools:context="com.corp_awesome.bellus.Domus">

    <android.support.v7.widget.CardView
        style="@style/CardViewBase"
        android:onClick="bookAppointment"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/greenBackground"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/booking_IV"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_weight="50"
                android:contentDescription="@string/booking_contentDescription"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    style="@style/LightHeaderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_appointment"/>
                <TextView
                    style="@style/LightSubHeaderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/reserve_time"
                    />


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/CardViewBase"
        android:onClick="gallery">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/teal_gradient"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/gallery_IV"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_height="80dp"
            android:layout_weight="50"
            android:contentDescription="@string/gallery_contentDescription"/>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LightHeaderText"
                android:text="@string/gallery"/>

            <TextView
                style="@style/LightSubHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/view_gallery"
                />

        </LinearLayout>



    </LinearLayout>
</android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        style="@style/CardViewBase"
        android:onClick="about">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/amber_gradient"
            android:padding="5dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/about_IV"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_weight="50"
                android:contentDescription="@string/about_contentDescription"/>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/LightHeaderText"
                android:text="@string/about"/>

            <TextView
                style="@style/LightSubHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/policy_header"
                />

        </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>


</android.widget.LinearLayout>
